12/5/11 #3175 switch to subclassing for sim-sharing drag handlers
12/5/11 #3175, add "object" parameter to sim-sharing drag handlers, add x,y params to SimSharingEvents drag handler
12/5/11 Added a getter to make it possible to override backgrounds
12/2/11 #3174, create sim-strings "objects", "actions" and "parameters" classes, for encapulating string literals; use throughout phetcommon
12/1/2011 Created integerproperty package by copying doubleproperty package
11/28/2011 Factored out server to handle strings vs serialized objects
11/28/2011 Parameterized IActor on message types to support both String and serialized messages
11/9/2011 Simsharing, added flag ALLOW_CONNECTION for debugging, if this is set to false, then it won't send messages to the server, but will still print them to the console
11/8/2011 Added NullClient for offline testing, see #3136
11/4/2011 Report on the number of messages sent for purposes of error-checking and verifying that no messages were dropped, see #3136
11/4/2011 Overrode Some.equals, Some.hashCode and None.equals
11/3/2011 Create .phet directory if it did not exist in sim sharing cookie creation, see #3136
11/3/2011 Added a research menu item in the about menu, see #3136
11/3/2011 Added an input dialog for id, see #3136
11/2/2011 Repackaged classes under phetcommon/simsharing, see #3136
11/2/2011 Send an event when the user resizes the sim window, and on the initial window sizing, see #3136
11/2/2011 Added a parser version, see #3136
11/2/2011 If sim sharing is on, show a menu for isolating and identifying sessions, see #3145
11/2/2011 Report on student usage for menus and menu items, see #3144
11/2/2011 Added flush commands and factored out IP address, see #3136
11/2/2011 Switched to use writeUTF instead of writeObject, see #3136
11/2/2011 Use tab instead of comma as parameter delimiter, see #3136
11/1/2011 Changed from SimSharingProperty to track UI control changes, see #3136