@@ -5,6 +5,7 @@ import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.net.Socket;
+import java.util.logging.Logger;
 
 /**
  * Fairly general-purpose class for communicating with a server over sockets.
@@ -12,6 +13,9 @@ import java.net.Socket;
  * @author Sam Reid
  */
 public abstract class ObjectStreamActor<T, U> implements IActor<T, U> {
+
+    private static final Logger LOGGER = Logger.getLogger( ObjectStreamActor.class.getCanonicalName() );
+
     private final Socket socket;
     public final ObjectOutputStream writeToServer;
     public final ObjectInputStream readFromServer;
@@ -35,6 +39,6 @@ public abstract class ObjectStreamActor<T, U> implements IActor<T, U> {
 
         //Read the initial message from the server to verify communication is working properly
         Object fromServer = readFromServer.readUTF();
-        System.out.println( "MessageServer: " + fromServer );
+        LOGGER.info( "MessageServer: " + fromServer );
     }
 }
