@@ -4,6 +4,7 @@ package edu.colorado.phet.common.phetcommon.simsharing;
 import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
+import java.util.logging.Logger;
 
 /**
  * Server that sends and receives strings only using writeUTF and readUTF because it is safe against version changes.
@@ -11,6 +12,9 @@ import java.io.ObjectOutputStream;
  * @author Sam Reid
  */
 public class StringServer extends ObjectStreamMessageServer {
+
+    private static final Logger LOGGER = Logger.getLogger( StringServer.class.getCanonicalName() );
+
     public StringServer( int port, MessageHandler messageHandler ) {
         super( port, messageHandler );
     }
@@ -35,7 +39,7 @@ public class StringServer extends ObjectStreamMessageServer {
     //The maximum length of Strings that can be handled this way is 65535 for pure ASCII, less if you use non-ASCII characters - and you cannot easily predict the limit in that case, other than conservatively assuming 3 bytes per character. So if you're sure you'll never send Strings longer than about 20k, you'll be fine.
     public static void checkSize( String question ) {
         if ( question.length() > 20000 ) {
-            System.out.println( "String probably too long to send over writeUTF, length = " + question.length() );
+            LOGGER.warning( "String probably too long to send over writeUTF, length = " + question.length() );
         }
     }
 }
